I removed unnecessary content and photos. I consolidated the information and changed the footer.

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 						<ul class="fh5co-social">
 							<li><a href="#"><i class="icon-facebook2"></i></a></li>
 							<li><a href="#"><i class="icon-twitter2"></i></a></li>
-							<li><a href="#"><i class="icon-github"></i></a></li>
+							<li><a href="#"><i class="icon-instagram"></i></a></li>
 						</ul>
 					</div>
 				</div>
@@ -358,7 +358,7 @@
 		<div class="container">
 			<div class="row row-pb-md">
 				<div class="col-md-3 fh5co-widget">
-					<p>OvarianGuide</p>
+					<p>2024 © OvarianGuide.pl</p>
 				</div>
 				
 			<div class="row copyright">
