--- a/kontakt.html
+++ b/kontakt.html
@@ -149,7 +149,7 @@
 						<ul class="fh5co-social">
 							<li><a href="#"><i class="icon-facebook2"></i></a></li>
 							<li><a href="#"><i class="icon-twitter2"></i></a></li>
-							<li><a href="#"><i class="icon-github"></i></a></li>
+							<li><a href="#"><i class="icon-instagram"></i></a></li>
 						</ul>
 					</div>
 				</div>
@@ -216,7 +216,7 @@
 						<ul>
 							<li class="address">Wiejska 45C, <br> 15-352 Białystok</li>
 							<li class="phone"><a href="tel://720730740">+48 720 730 740</a></li>
-							<li class="email"><a href="mailto:contact@ovarianguide.com">contact@ovarianguide.com</a></li>
+							<li class="email"><a href="mailto:kontakt@ovarianguide.com">kontakt@ovarianguide.com</a></li>
 						</ul>
 					</div>
 
@@ -283,62 +283,17 @@
 		<div class="container">
 			<div class="row row-pb-md">
 				<div class="col-md-3 fh5co-widget">
-					<h3>leczenie Education</h3>
-					<p>Facilis ipsum reprehenderit nemo molestias. Aut cum mollitia reprehenderit. Eos cumque dicta adipisci architecto culpa amet.</p>
+					<p>2024 © OvarianGuide.pl</p>
 				</div>
-				<div class="col-md-2 col-sm-4 col-xs-6 col-md-push-1 fh5co-widget">
-					<h3>Learning</h3>
-					<ul class="fh5co-footer-links">
-						<li><a href="#">Course</a></li>
-						<li><a href="#">O mnie</a></li>
-						<li><a href="#">kontakt</a></li>
-						<li><a href="#">Terms</a></li>
-						<li><a href="#">Meetups</a></li>
-					</ul>
-				</div>
-
-				<div class="col-md-2 col-sm-4 col-xs-6 col-md-push-1 fh5co-widget">
-					<h3>Learn &amp; Grow</h3>
-					<ul class="fh5co-footer-links">
-						<li><a href="#">O mnie</a></li>
-						<li><a href="#">Privacy</a></li>
-						<li><a href="#">Testimonials</a></li>
-						<li><a href="#">Handbook</a></li>
-						<li><a href="#">Held Desk</a></li>
-					</ul>
-				</div>
-
-				<div class="col-md-2 col-sm-4 col-xs-6 col-md-push-1 fh5co-widget">
-					<h3>Engage us</h3>
-					<ul class="fh5co-footer-links">
-						<li><a href="#">Marketing</a></li>
-						<li><a href="#">Visual Assistant</a></li>
-						<li><a href="#">System Analysis</a></li>
-						<li><a href="#">Advertise</a></li>
-					</ul>
-				</div>
-
-				<div class="col-md-2 col-sm-4 col-xs-6 col-md-push-1 fh5co-widget">
-					<h3>Legal</h3>
-					<ul class="fh5co-footer-links">
-						<li><a href="#">Find Designers</a></li>
-						<li><a href="#">Find Developers</a></li>
-						<li><a href="#">Teams</a></li>
-						<li><a href="#">Advertise</a></li>
-						<li><a href="#">API</a></li>
-					</ul>
-				</div>
-			</div>
-
+				
 			<div class="row copyright">
 				<div class="col-md-12 text-center">
 					<p>
-						<small class="block">&copy; 2016 Free HTML5. All Rights Reserved.</small> 
+						<small class="block">&copy; 2016 Free HTML5. All Rights Reserved.</small>
 						<small class="block">Designed by <a href="http://freehtml5.co/" target="_blank">FreeHTML5.co</a> Demo Images: <a href="http://unsplash.co/" target="_blank">Unsplash</a> &amp; <a href="https://www.pexels.com/" target="_blank">Pexels</a></small>
 					</p>
 				</div>
 			</div>
-
 		</div>
 	</footer>
 	</div>
@@ -347,7 +302,7 @@
 	</div>
 	<div class="custom-body">
 		<!-- Dodajemy przycisk do otwierania chatboxa -->
-		<button class="open-chatbox-button" onclick="toggleChatbox()">Open Chatbox</button>
+		<button class="open-chatbox-button" onclick="toggleChatbox()">Otwórz czat</button>
 
 		<!-- Kontener chatboxa -->
 		<div class="chatbox-container">
@@ -355,8 +310,8 @@
 			<div class="chatbox" id="chatbox" stu>
 				<div class="chat-log" id="chat-log"></div>
 				<div class="chat-input">
-					<input type="text" id="message-input" placeholder="Type your message...">
-					<button onclick="sendMessage()">Send</button>
+					<input type="text" id="message-input" placeholder="Twoja wiadomość...">
+					<button onclick="sendMessage()">Wyślij</button>
 				</div>
 			</div>
 		</div>
@@ -388,7 +343,7 @@
 					var chatLog = document.getElementById("chat-log");
 					var newMessage = document.createElement("div");
 					newMessage.className = "message";
-					newMessage.textContent = "Assistant: How can I help you?";
+					newMessage.textContent = "Asystent: Jak mogę Ci pomóc?";
 					chatLog.appendChild(newMessage);
 	
 					// Optional: Scroll to the bottom of the chat log
@@ -418,7 +373,7 @@
 					var chatLog = document.getElementById("chat-log");
 					var newMessage = document.createElement("div");
 					newMessage.className = "message";
-					newMessage.textContent = "You: "+ message;
+					newMessage.textContent = "Ty: "+ message;
 	
 					chatLog.appendChild(newMessage);
 	
